steps/2.calico/5.netpo/example/1_deny_other_namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-other-namespace
  namespace: demo1
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
