steps/2.calico/5.netpo/example/2_allow_monitor_namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-monitor
  namespace: demo1
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsname: demo3
