steps/2.calico/5.netpo/example/new_1_deny_diff_ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-other-namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
