steps/2.calico/5.netpo/example/test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-core
  namespace: demo1
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.18.1.230/32
        - 10.18.1.2/32
  policyTypes:
  - Egress
